pkg/objects/Employee__c.object
<CustomObject>
    <description>Objeto responsável por gerenciar funcionários.</description>
    <fields>
        <fullName>ActingAs__c</fullName>
        <description>Campo para descrever a atuação do funcionário.</description>
        <inlineHelpText>Area atual do funcionário.</inlineHelpText>
        <label>Acting As</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AdmissionDate__c</fullName>
        <description>Campo para registrar a data de admissão do funcionário.</description>
        <inlineHelpText>Data de admissão do funcionário</inlineHelpText>
        <label>Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdmissionYear__c</fullName>
        <formula>CASE(Year( AdmissionDate__c ),
2000, &quot;00&quot;,
2001, &quot;01&quot;,
2002, &quot;02&quot;, 
2003, &quot;03&quot;, 
2004, &quot;04&quot;, 
2005, &quot;05&quot;,
2006, &quot;06&quot;,
2007, &quot;07&quot;,
2008, &quot;08&quot;,
2017, &quot;17&quot;,
2018, &quot;18&quot;,
2019, &quot;19&quot;,
2020, &quot;20&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ano de Admissão</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advertising Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aeronautica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aeronáutica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Campo para registrar a idade do funcionário.</description>
        <formula>IF( NOT( ISBLANK(  DateOfBirth__c  ) ) ,

  IF( DATE( 2000 , MONTH( DateOfBirth__c ) , DAY( DateOfBirth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),

     YEAR (Today()) - YEAR ( DateOfBirth__c ),

     YEAR (Today()) - YEAR ( DateOfBirth__c ) -1 ),

  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Idade do funcionário</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agronegocio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agronegócio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alimenticia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alimentícia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllocatedEmployee__c</fullName>
        <description>Campo para registrar se o funcionário está alocado.</description>
        <formula>IF( Alocacoes_Ativas__c &gt;= 1 ,&quot;Alocado&quot;, IF (Alocacoes_Ativas__c = 0 || NULL, &quot;Não Alocado&quot;, &quot;ERRO&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Registrar se o funcionário está alocado.</inlineHelpText>
        <label>Allocated Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para registrar a alocação do funcionário.</description>
        <inlineHelpText>Alocação do funcionário.</inlineHelpText>
        <label>Allocation</label>
        <referenceTo>Alocation__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alocacao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alocação</label>
        <referenceTo>Alocation__c</referenceTo>
        <relationshipName>Funcion_rios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alocacoes_Ativas__c</fullName>
        <label>Alocações Ativas</label>
        <summaryFilterItems>
            <field>Alocation__c.Alocado_Projeto__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Alocation__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alocation__c</fullName>
        <label>UF da Alocação</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>App Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audience Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automation_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automation Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automotive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Consumer</inlineHelpText>
        <label>Automotive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aviacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aviação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bairro__c</fullName>
        <label>Bairro</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banking_and_Capital_Markets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Financial Services</inlineHelpText>
        <label>Banking and Capital Markets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CEP__c</fullName>
        <label>CEP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cargo_Ajustado__c</fullName>
        <label>Cargo Ajustado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sócio</fullName>
                </value>
                <value>
                    <fullName>Diretor</fullName>
                </value>
                <value>
                    <fullName>Gerente Sênior</fullName>
                </value>
                <value>
                    <fullName>Gerente</fullName>
                </value>
                <value>
                    <fullName>Sênior</fullName>
                </value>
                <value>
                    <fullName>Pleno</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIRETOR</fullName>
                </value>
                <value>
                    <fullName>GERENTE</fullName>
                </value>
                <value>
                    <fullName>GERENTE SR</fullName>
                </value>
                <value>
                    <fullName>SENIOR</fullName>
                </value>
                <value>
                    <fullName>SOCIO</fullName>
                </value>
                <value>
                    <fullName>STAFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CertificationsNumber__c</fullName>
        <description>Campo para registrar o número de certificações do funcionário.</description>
        <inlineHelpText>Número de certificações do funcionário.</inlineHelpText>
        <label>Certifications Number</label>
        <summaryForeignKey>Certification__c.Employee_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cidade__c</fullName>
        <label>Cidade</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Campo para registrar a cidade do funcionário</description>
        <inlineHelpText>Cidade do funcionário</inlineHelpText>
        <label>City</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Government__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Government and Public Services</inlineHelpText>
        <label>Civil Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coachs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para registrar o coach do funcionário</description>
        <inlineHelpText>Coach do funcionário</inlineHelpText>
        <label>Coach</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>Funcion_rios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_de_Verificacao__c</fullName>
        <description>Código para verificação do usuário na comunidade.</description>
        <label>Código de Verificação</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comercio_Exterior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comércio Exterior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complement__c</fullName>
        <description>Campo para registrar o complemento do endereço do funcionário</description>
        <inlineHelpText>Complemento do endereço do funcionário</inlineHelpText>
        <label>Complement</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complemento__c</fullName>
        <label>Complemento</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Consumer</inlineHelpText>
        <label>Consumer Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>Campo para registrar o centro de custo dos funcionários.</description>
        <inlineHelpText>Centro de custo dos funcionários</inlineHelpText>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2000081</fullName>
                </value>
                <value>
                    <fullName>1008101</fullName>
                </value>
                <value>
                    <fullName>1008261</fullName>
                </value>
                <value>
                    <fullName>9008101</fullName>
                </value>
                <value>
                    <fullName>3008101</fullName>
                </value>
                <value>
                    <fullName>1008271</fullName>
                    <isActive>false</isActive>
                    <label>1008271</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criterio_de_Avaliacao__c</fullName>
        <label>Critério de Avaliação</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apoio Técnico</fullName>
                </value>
                <value>
                    <fullName>Capacitação</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Coworking</fullName>
                </value>
                <value>
                    <fullName>KPI</fullName>
                </value>
                <value>
                    <fullName>Métodos</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Pré Vendas</fullName>
                </value>
                <value>
                    <fullName>Vendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Cloud_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross-Cloud Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Atualizacao__c</fullName>
        <label>Data de Atualização</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Management_and_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Management and Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_do_Ultimo_Acesso_no_Portal__c</fullName>
        <description>Última data que o funcionário acessou o portal da comunidade.</description>
        <label>Data do Último Acesso no Portal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <description>Campo para registrar a data de nascimento do funcionário.</description>
        <inlineHelpText>Data de nascimento  do funcionário</inlineHelpText>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datorama__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datorama</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defense_Security_and_Justice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Government and Public Services</inlineHelpText>
        <label>Defense, Security and Justice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Thinking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Thinking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribuiu_Pontos__c</fullName>
        <formula>IF((Pontos_distribuidos__c) &gt; 0 ,true,false) || IF((Escolheu_Nao_Distribuir_Pontos__c) = true, true, false)</formula>
        <label>Distribuiu Pontos?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eduacacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eduacação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eletrodomesticos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eletrodomésticos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Campo para registrar o email do funcionário.</description>
        <externalId>true</externalId>
        <inlineHelpText>Email do funcionário</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Data de Término</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engenharia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engenharia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnglishLevel__c</fullName>
        <label>Nível de Inglês</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Higher Intermediate</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Pre-Intermediate</fullName>
                </value>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                    <label>Basic</label>
                </value>
                <value>
                    <fullName>Sem Teste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escolheu_Nao_Distribuir_Pontos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escolheu Não Distribuir Pontos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financeiro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financeiro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Service_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Service Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foto__c</fullName>
        <label>Foto</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Funcionario_Alocado__c</fullName>
        <formula>IF( Alocacoes_Ativas__c &gt;= 1 ,&quot;Alocado&quot;, IF (Alocacoes_Ativas__c = 0 || NULL, &quot;Não Alocado&quot;, &quot;ERRO&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funcionário Alocado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Campo para registrar o gênero do funcionário.</description>
        <inlineHelpText>Gênero do funcionário</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Feminino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genero__c</fullName>
        <label>Gênero</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Feminino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Life Sciences and Health Care</inlineHelpText>
        <label>Health Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_and_Social_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Government and Public Services</inlineHelpText>
        <label>Health and Social Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospitality_and_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Consumer</inlineHelpText>
        <label>Hospitality and Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Idade__c</fullName>
        <formula>IF( NOT( ISBLANK(  DateOfBirth__c  ) ) ,

  IF( DATE( 2000 , MONTH( DateOfBirth__c ) , DAY( DateOfBirth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),

     YEAR (Today()) - YEAR ( DateOfBirth__c ),

     YEAR (Today()) - YEAR ( DateOfBirth__c ) -1 ),

  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Idade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incorporacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorporação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industrial_Products_and_Constructions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Energy, Resources and Industrials</inlineHelpText>
        <label>Industrial Products and Constructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industrias__c</fullName>
        <label>Indústrias</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking and Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Civil Government</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Defense, Security and Justice</fullName>
                </value>
                <value>
                    <fullName>Health and Social Care</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Industrial Products and Constructions</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>International Donor Organizations</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Media and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Mining and Metals</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oil, Gas and Chemicals</fullName>
                </value>
                <value>
                    <fullName>Power and Utilities</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Retail, Wholesale and Distribution</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Transportation, Hospitality and Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Financial Services</inlineHelpText>
        <label>Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integracao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integração</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction_Studio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interaction Studio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Donor_Organizations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Government and Public Services</inlineHelpText>
        <label>International Donor Organizations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Financial Services</inlineHelpText>
        <label>Investment Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobCategory__c</fullName>
        <description>Campo que demonstra a categoria do cargo do funcionário.</description>
        <formula>IF(
(ISPICKVAL(Roles__c, &quot;DIRETOR&quot;)
|| ISPICKVAL(Roles__c,&quot;GERENTE 1&quot;)
|| ISPICKVAL(Roles__c,&quot;GERENTE 2&quot;)
|| ISPICKVAL(Roles__c,&quot;GERENTE DE SISTEMAS 1&quot;)
|| ISPICKVAL(Roles__c,&quot;GERENTE ESPECIALISTA&quot;)
|| ISPICKVAL(Roles__c,&quot;GERENTE SENIOR&quot;)
|| ISPICKVAL(Roles__c,&quot;SOCIO&quot;)),&quot;EXECUTIVO&quot;, &quot;STAFF&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Categoria do cargo do funcionário.</inlineHelpText>
        <label>JobCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobLevel__c</fullName>
        <description>Campo formula para definiçao do nível do cargo do funcionário.</description>
        <formula>IF(
(ISPICKVAL(Roles__c, &quot;ANALISTA DE NEGOCIOS 1&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE NEGOCIOS 2&quot;)),&quot;ANALISTA DE NEGOCIOS&quot;,
IF((ISPICKVAL(Roles__c, &quot;ADMINISTRATIVO&quot;)),&quot;ADMINISTRATIVO&quot;,
IF((ISPICKVAL(Roles__c, &quot;ANALISTA DE SISTEMAS JUNIOR 1&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS JUNIOR 2&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS JUNIOR 3&quot;)
|| ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS PLENO 1&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS PLENO 2&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS PLENO 3&quot;)
|| ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS SENIOR 1&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS SENIOR 2&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS SENIOR 3&quot;)
|| ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS SENIOR 4&quot;) || ISPICKVAL(Roles__c,&quot;ANALISTA DE SISTEMAS SENIOR ESPECIALISTA&quot;)),&quot;ANALISTA DE SISTEMAS&quot;,
IF((ISPICKVAL(Roles__c, &quot;ARQUITETO ESPECIALISTA DE SOLUÇÕES 1&quot;) || ISPICKVAL(Roles__c,&quot;ARQUITETO ESPECIALISTA DE SOLUÇÕES 2&quot;)
|| ISPICKVAL(Roles__c,&quot;ARQUITETO ESPECIALISTA DE SOLUÇÕES 3&quot;) || ISPICKVAL(Roles__c,&quot;ARQUITETO ESPECIALISTA DE SOLUÇÕES 4&quot;)),&quot;ARQUITETO ESPECIALISTA DE SOLUÇÕES&quot;,
IF((ISPICKVAL(Roles__c, &quot;CONSULTOR 1&quot;) || ISPICKVAL(Roles__c,&quot;CONSULTOR 2&quot;) || ISPICKVAL(Roles__c,&quot;CONSULTOR SENIOR 1&quot;)
|| ISPICKVAL(Roles__c,&quot;CONSULTOR SENIOR 2&quot;) || ISPICKVAL(Roles__c,&quot;CONSULTOR SENIOR ESPECIALISTA&quot;)),&quot;CONSULTOR&quot;,
IF((ISPICKVAL(Roles__c, &quot;COORDENADOR DE SISTEMAS 1&quot;) || ISPICKVAL(Roles__c,&quot;COORDENADOR DE SISTEMAS 2&quot;)),&quot;COORDENADOR DE SISTEMAS&quot;,
IF((ISPICKVAL(Roles__c, &quot;DIRETOR&quot;)),&quot;DIRETOR&quot;,
IF((ISPICKVAL(Roles__c, &quot;GERENTE 1&quot;) || ISPICKVAL(Roles__c,&quot;GERENTE 2&quot;) || ISPICKVAL(Roles__c,&quot;GERENTE DE SISTEMAS 1&quot;)
|| ISPICKVAL(Roles__c,&quot;GERENTE ESPECIALISTA&quot;) || ISPICKVAL(Roles__c,&quot;GERENTE SENIOR&quot;)),&quot;GERENTE&quot;,
IF((ISPICKVAL(Roles__c, &quot;PROGRAMADOR JUNIOR 1&quot;) || ISPICKVAL(Roles__c,&quot;PROGRAMADOR JUNIOR 2&quot;) || ISPICKVAL(Roles__c,&quot;PROGRAMADOR JUNIOR 3&quot;)
|| ISPICKVAL(Roles__c,&quot;PROGRAMADOR PLENO 1&quot;) || ISPICKVAL(Roles__c,&quot;PROGRAMADOR PLENO 2&quot;)
|| ISPICKVAL(Roles__c,&quot;PROGRAMADOR SENIOR 1&quot;) || ISPICKVAL(Roles__c,&quot;PROGRAMADOR SENIOR 2&quot;)),&quot;PROGRAMADOR&quot;,
IF((ISPICKVAL(Roles__c, &quot;SOCIO&quot;)),&quot;SOCIO&quot;,&quot;&quot;)))))))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nível do cargo do funcionário</inlineHelpText>
        <label>JobLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jornalismo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jornalismo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Journey Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LGPD__c</fullName>
        <label>LGPD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Sciences__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Industry - Life Sciences and Health Care</inlineHelpText>
        <label>Life Sciences</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>